--- a/views/pages/manage.hbs
+++ b/views/pages/manage.hbs
@@ -64,7 +64,7 @@
 
     function loadCitizen(){
         return new Promise((resolve,reject)=>{
-            fetch('/api/getAll/mode=citizen&code=nis', {
+            fetch('/api/getAll/mode=citizen', {
                 method: 'GET',
             }).then(response => response.json())
             .then((res)=>{
@@ -130,10 +130,9 @@
 
     const updateCitizenStatus =(user, status)=> {
         
-        const code = 'nis';
         const mode = 'citizen';
         const detail = { ...user, status };
-        const postObj = { code, detail, mode };
+        const postObj = { detail, mode };
 
         fetch('/api/updateCitizen', {
             method: 'PUT',
@@ -210,7 +209,6 @@
     $('body').on('click','.reject', function(){
         //this action calls blockchain
         const id = $(this).closest('tr').data('id');
-        const code = 'nis';
         const mode = 'citizen';   
         const { org } = $('#auth_user').data(); 
 
