--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -194,7 +194,7 @@
 
     const loadCitizen = () => {
         return new Promise((resolve,reject)=>{
-            fetch('/api/getAll/mode=citizen&code=nis', {
+            fetch('/api/getAll/mode=citizen', {
                 method: 'GET',
             }).then(response => response.json())
             .then((res)=>{
@@ -430,7 +430,6 @@
         const formData = getFormData();   
         const gender = $('input[type="radio"][name="gender"]:checked').val();
 
-        const code = 'nis';
         const mode = 'citizen';
         const citizen = { ...formData, gender};
 
@@ -455,7 +454,7 @@
             const { status, message, data } = res;
             if (status == "success" && res && data) {
                 let { fileurl } = data;
-                const postObj = { code, citizen: {...citizen, fileurl }, mode };
+                const postObj = { citizen: {...citizen, fileurl }, mode };
                 console.log(postObj);
                 saveUserData(postObj);
             }
@@ -469,7 +468,6 @@
         const formData = getFormData();   
         const gender = $('input[type="radio"][name="gender"]:checked').val();
 
-        const code = 'nis';
         const mode = 'citizen';
         const { status } = citizens.find(obj=>obj.id == editedID);
         const detail = { id, ...formData, gender, status};      
@@ -477,7 +475,7 @@
         const isValid = validateForm(detail, 'middlename');        
         if(!isValid) return alert('Empty field not allowed');       
         
-        const postObj = { code, detail, mode };
+        const postObj = { detail, mode };
 
         fetch('/api/updateCitizen', {
             method: 'PUT',
@@ -503,7 +501,6 @@
         const formData = getFormData();   
         const gender = $("input[type='radio'][name='gender']:checked").val();
 
-        const code = 'nis';
         const mode = 'citizen';
         const { status } = citizens.find(obj=>obj.id == editedID);
         const { publickey, userid } = myblocks.extras;
@@ -513,7 +510,7 @@
         const isValid = validateForm(citizen, 'middlename');        
         if(!isValid) return alert('Empty field not allowed'); 
 
-        const postObj = { code, citizen, mode };        
+        const postObj = { citizen, mode };        
         saveUserData(postObj);
     });
 
@@ -586,7 +583,6 @@
 
     $('body').on('click','.remove', function(){
         const id = $(this).closest('tr').data('id');
-        const code = 'nis';
         const mode = 'citizen';
 
         if(!confirm('Are you sure')) return false;        
@@ -596,7 +592,7 @@
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ code, mode, id })
+            body: JSON.stringify({ mode, id })
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
