--- a/views/pages/staff.hbs
+++ b/views/pages/staff.hbs
@@ -36,7 +36,7 @@
                             <form action="" method="post">
                                 <input type="text" id="name" name="name" class="form-control mb-4" placeholder="Fullname" value="">
                                 <input type="number" id="phone" name="name" class="form-control mb-4" placeholder="Phone" value="">
-                                <input type="email" id="email" name="code" class="form-control mb-4" placeholder="Email" value="">
+                                <input type="email" id="email" name="email" class="form-control mb-4" placeholder="Email" value="">
                                 <div>
                                     <div class="custom-control custom-radio">
                                         <input type="radio" class="custom-control-input" id="staff" name="role" checked value="staff">
@@ -111,7 +111,7 @@
 
     function loadStaff(){
         return new Promise((resolve,reject)=>{
-            fetch('/api/getAll/mode=staff&code=nis', {
+            fetch('/api/getAll/mode=staff', {
                 method: 'GET',
             }).then(response => response.json())
             .then((res)=>{
@@ -149,9 +149,8 @@
         const role = $("input[type='radio'][name='role']:checked").val();
         if(!name || !phone || !email) return alert('Empty field not allowed');
 
-        const code = 'nis';
         const staff = { name, phone, email, role };
-        const postObj = { code, staff, mode: 'staff' };
+        const postObj = { staff, mode: 'staff' };
 
         console.log(postObj);
         fetch('/api/createStaff', {
@@ -181,9 +180,8 @@
 
         const id = editedID;
 
-        const code = 'nis';
         const detail = { id, name, phone, email, role };
-        const postObj = { code, detail, mode: 'staff' };
+        const postObj = { detail, mode: 'staff' };
 
         console.log(postObj);
         fetch('/api/updateStaff', {
@@ -213,7 +211,6 @@
 
     $('body').on('click','.remove', function(){
         const staff_id = $(this).closest('tr').data('id');
-        const code = 'nis';
 
         if(!confirm('Are you sure')) return false;        
 
@@ -222,7 +219,7 @@
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ code, staff_id })
+            body: JSON.stringify({ staff_id })
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
