feat/implement single sign on ID

--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -542,8 +542,8 @@
         $('.user-avatar').css('display','block');
     });        
 
-    $('#generatePassport').click(function(){
-        $('#passport_no').val(new Date().getTime());
+    $('#generateNIN').click(function(){
+        $('#nin').val(new Date().getTime());
     });
 
     $('#checkIDentity').click(function(e){
