--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -152,10 +152,12 @@
                                 <thead class="blue-grey lighten-4">
                                 <tr>
                                     <th>#</th>
-                                    <th>Fullname</th>
+                                    <th>Surname</th>
+                                    <th>Firstname</th>
+                                    <th>Middlename</th>
                                     <th>Dat of Birth</th>
                                     <th>Gender</th>
-                                    <th>Passport Number</th>
+                                    <th>NIN</th>
                                     <th>Status</th>
                                     <th>Action</th>
                                 </tr>
