--- a/views/pages/manage.hbs
+++ b/views/pages/manage.hbs
@@ -34,14 +34,14 @@
                                 <thead class="blue-grey lighten-4">
                                 <tr>
                                     <th>#</th>
-                                    <th>Fullname</th>
+                                    <th>Surname</th>
+                                    <th>Firstname</th>
+                                    <th>Middlename</th>
                                     <th>Dat of Birth</th>
                                     <th>Gender</th>
-                                    <th>Passport number</th>
+                                    <th>NIN</th>
                                     <th>Status</th>
                                     <th>Action</th>
-                                </tr>
-                                </thead>
                                 <tbody>
                                 </tbody>
                             </table>
