--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -27,9 +27,9 @@
         {{!-- view all blocks copy of the organization node --}}
         <a href="/my_nodes" class="list-group-item list-group-item-action waves-effect">
             <i class="fas fa-book mr-3"></i>My Nodes</a> 
-         {{!--view all blocks on all nodes  --}}
-        {{!-- <a href="/all_nodes" class="list-group-item list-group-item-action waves-effect">
-            <i class="fas fa-book mr-3"></i>All Nodes</a>       --}}
+         {{!-- view report  --}}
+        <a href="/report" class="list-group-item list-group-item-action waves-effect">
+            <i class="fas fa-book mr-3"></i>Report</a>      
     </div>
     {{else}}
         <div class="list-group list-group-flush">
