--- a/views/pages/my_nodes.hbs
+++ b/views/pages/my_nodes.hbs
@@ -72,7 +72,7 @@
         
         const { org } = $('#auth_user').data(); 
 
-        fetch('http://localhost:8900/api/get_my_nodes', {
+        fetch('https://ssoblockchain.herokuapp.com/api/get_my_nodes', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
